# not_copy

./: Cargo.toml
src/: lib.rs
