[package]
name = "not_copy"
version = "1.0.0"
authors = ["jacobkiesel <kieseljake@gmail.com>"]
edition = "2018"
repository = "https://github.com/Xaeroxe/not_copy"
documentation = "https://docs.rs/not_copy/1.0.0/not_copy/"
license = "MIT/Apache-2.0"
description = "For when you need to trivially turn a Copy type into something that isn't Copy."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
